improving user experience

--- a/client/src/app/city-form/city-form.component.html
+++ b/client/src/app/city-form/city-form.component.html
@@ -7,23 +7,23 @@
                class="form-control"
                id="name"
                name="name"
-               placeholder="Enter your name">
+               placeholder="Enter city name">
       </div>
       <div class="form-group">
-        <label for="lat">Lat</label>
+        <label for="lat">Latitude</label>
         <input type="text" [(ngModel)]="city.lat"
                class="form-control"
                id="lat"
                name="lat"
-               placeholder="Enter your email address">
+               placeholder="Enter city latitude">
       </div>
       <div class="form-group">
-        <label for="lon">Lon</label>
+        <label for="lon">Longitude</label>
         <input type="text" [(ngModel)]="city.lon"
                class="form-control"
                id="lon"
                name="lon"
-               placeholder="Enter your email address">
+               placeholder="Enter city longitude">
       </div>
       <button type="submit" class="btn btn-info">Submit</button>
     </form>
