--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -6,8 +6,7 @@
           <h2 class="card-title text-center text-white py-3">{{ title }}</h2>
           <ul class="text-center list-inline py-3">
             <li class="list-inline-item">
-<!--              <a routerLink="/users" class="btn btn-info">List Users</a>-->
-              <a routerLink="/test" class="btn btn-info">teste</a>
+              <a routerLink="/search" class="btn btn-info">Add city information</a>
             </li>
           </ul>
         </div>
